tests/negative/gold/incomplete_string_interpolation2_test.gold
tests/negative/incomplete_string_interpolation2_test.toit:4:11: error: Incomplete string interpolation
  print "$
          ^
tests/negative/incomplete_string_interpolation2_test.toit:5:14: error: Unterminated string
  unresolved1 // This line is consumed as part of the unterminated string.
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/incomplete_string_interpolation2_test.toit:6:3: error: Unresolved identifier: 'unresolved2'
  unresolved2 // This line gives an error.
  ^~~~~~~~~~~
Compilation failed.
